force-app/main/default/objects/Agency_Contract__c/Agency_Contract__c.object-meta.xml
<CustomObject>
    <description>ECM v1 Job Placement Service Domain</description>
    <label>Agency Contract</label>
    <nameField>
        <label>Agency Contract Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Agency Contracts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>