force-app/main/default/objects/Agency_Contract__c/fields/Extension_of__c.field-meta.xml
<CustomField>
    <fullName>Extension_of__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Optional field to specify a previous contract that this contract is extends.</inlineHelpText>
    <label>Extension of</label>
    <referenceTo>Agency_Contract__c</referenceTo>
    <relationshipLabel>Agency Contracts (Extension of)</relationshipLabel>
    <relationshipName>Extends_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>