force-app/main/default/objects/Agency_Contract__c/fields/Gap_Period__c.field-meta.xml
<CustomField>
    <fullName>Gap_Period__c</fullName>
    <description>Refusing to follow directions and orders</description>
    <inlineHelpText>The number of days that can elapse between placements and not negatively impact placement status.</inlineHelpText>
    <label>Gap Period (Days)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>