force-app/main/default/objects/Agency_Contract__c/fields/Level_of_Subsidy__c.field-meta.xml
<CustomField>
    <fullName>Level_of_Subsidy__c</fullName>
    <description>ECMv1 Job Placement Domain Template</description>
    <label>Level of Subsidy</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Level One</fullName>
            </value>
            <value>
                <fullName>Level Two</fullName>
            </value>
            <value>
                <fullName>Number?</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>