force-app/main/default/objects/Agency_Contract__c/fields/Number_of_Milestones__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Milestones__c</fullName>
    <description>ECM v1 Job Placement</description>
    <label>Number of Milestones</label>
    <summaryForeignKey>Contract_Milestone__c.Agency_Contract__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>