force-app/main/default/objects/Agency_Contract__c/fields/Organization__c.field-meta.xml
<CustomField>
    <fullName>Organization__c</fullName>
    <description>ECMv1 Job Placement Domain Template</description>
    <label>Organization</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Agency Contracts</relationshipLabel>
    <relationshipName>Agency_Contracts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>