force-app/main/default/objects/Agency_Contract__c/fields/Rate_Unit__c.field-meta.xml
<CustomField>
    <fullName>Rate_Unit__c</fullName>
    <description>ECMv1 Job Placement Domain Template</description>
    <label>Rate Unit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Hour</fullName>
                <default>true</default>
                <label>Hour</label>
            </value>
            <value>
                <fullName>Day</fullName>
            </value>
            <value>
                <fullName>Week</fullName>
            </value>
            <value>
                <fullName>Piece</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>