force-app/main/default/objects/Agency_Contract__c/fields/Related_Contract__c.field-meta.xml
<CustomField>
    <fullName>Related_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ECMv1 Job Placement</description>
    <inlineHelpText>Link to a previous contract that the current contract extends.</inlineHelpText>
    <label>Related Contract</label>
    <referenceTo>Agency_Contract__c</referenceTo>
    <relationshipLabel>Agency Contracts</relationshipLabel>
    <relationshipName>Agency_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>