force-app/main/default/objects/Agency_Contract__c/fields/Subsidized__c.field-meta.xml
<CustomField>
    <fullName>Subsidized__c</fullName>
    <description>ECMv1 Job Placement Domain Template</description>
    <label>Subsidized</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>